# dynalab

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  worker.py
backend/db/: __init__.py  database.py  models.py
backend/handlers/: auth_handler.py  file_handler.py  job_handler.py  queue_handler.py
backend/job_queue/: __init__.py  redis_queue.py
backend/operators/: file_operator.py  simulation_operator.py
backend/schemas/: __init__.py  auth.py  job.py
backend/templates/: queue.html
backend/utils/: deps.py  rate_limit.py  security.py
frontend/: Caddyfile  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: FileUpload.tsx  JobCard.tsx  ProtectedRoute.tsx  SimulationForm.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.tsx  JobDetailPage.tsx  JobsPage.tsx  LoginPage.tsx  RegisterPage.tsx
upside/: .dockerignore  .gitignore  Dockerfile  README.md  install.sh  run_simulation.py  source_sh
upside/.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  environment.yml
upside/example/01.GettingStarted/: gmon.out
upside/example/13.RestartSimulation/: 0.run.py
upside/py/: PDB_to_initial_structure.py  advanced_config.py  estimate_rama_distributions.py  generate_restart_config.py  get_info_from_upside_traj.py  get_protection_state.py  mdtraj_upside.py  mpi_collective_object.py  predict_chi1.py  rotamer_parameter_estimation.py  run_upside.py  scale_params.py  tensorflow_upside.py
upside/src/: CMakeLists.txt  CMakeLists_arm.txt  CMakeLists_x86.txt  Float4.h
upside/start/: Pulling_Simulation_Force.py  Pulling_Simulations.py  Run_Replicas_Sequential.py  Single_Replica.py
upside/start/pdb/: README.md
upside/tutorial/01.ProofofLife/: run.py
upside/tutorial/02.EquilibriumDynamics/: run.py
upside/tutorial/03.PullingDynamics/: run.py
upside/web/: README.md
(+10 files in other folders)
